project ( BasicLayout)
set( DESIRED_QT_VERSION 4 )
INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
include(${QT_USE_FILE})
INCLUDE_DIRECTORIES( ${QT_INCLUDE_DIR} )
COMPLAYOUT_GENERATE(GENERATED_LAYOUT_SRC BasicLayout.xml)
#QT4_WRAP_CPP( GENERATED_FSM_SRC_MOC_HEADERS ${CMAKE_CURRENT_BINARY_DIR}/FullFSM/code/FSMTimer.h)
add_executable( process1  ${GENERATED_LAYOUT_SRC} main1.cpp ${GENERATED_COMPLAYOUT_SRC_MOC_HEADERS})
add_executable( process2  ${GENERATED_LAYOUT_SRC} main2.cpp ${GENERATED_COMPLAYOUT_SRC_MOC_HEADERS})
target_link_libraries(process1 ${QT_LIBRARIES})
target_link_libraries(process2 ${QT_LIBRARIES})



